<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbarDetail">

        <ImageView
            android:id="@+id/imvGender"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:src="@drawable/boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>


    <!--Content-->
    <FrameLayout
        android:padding="@dimen/padding"
        android:id="@+id/contentExtraFragment"
        android:layout_above="@+id/footbarRequest"
        android:layout_below="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <!--Foodbar-->
    <LinearLayout
        android:id="@+id/footbarRequest"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ความรู้สึก-->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:id="@+id/imvIcon1"
                android:layout_width="@dimen/footbar_icon"
                android:layout_height="@dimen/footbar_icon"
                android:src="@drawable/icon1" />

            <!--title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label6"
                android:textSize="@dimen/h2" />

        </LinearLayout>



        <!--คำถาม-->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:id="@+id/imvIcon2"
                android:src="@drawable/icon2"
                android:layout_width="@dimen/footbar_icon"
                android:layout_height="@dimen/footbar_icon" />

            <!--title-->
            <TextView
                android:text="@string/label7"
                android:textSize="@dimen/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--เร่งด่วน-->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:id="@+id/imvIcon3"
                android:src="@drawable/icon3"
                android:layout_width="@dimen/footbar_icon"
                android:layout_height="@dimen/footbar_icon" />

            <!--title-->
            <TextView
                android:text="@string/label8"
                android:textSize="@dimen/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Home-->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:id="@+id/imvicon4"
                android:src="@drawable/icon4"
                android:layout_width="@dimen/footbar_icon"
                android:layout_height="@dimen/footbar_icon" />

            <!--title-->
            <TextView
                android:text="@string/label9"
                android:textSize="@dimen/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>